--- a/store/blocks/pages/offerte-imperdibili.jsonc
+++ b/store/blocks/pages/offerte-imperdibili.jsonc
@@ -10,7 +10,7 @@
 
   "image#landingbanner": {
     "props": {
-      "minWidth": "100%",
+      //"minWidth": "100%",
       "src": "https://user-images.githubusercontent.com/18701182/69889938-64b16180-12d2-11ea-8d8a-e3089cbeaffd.png",
       "blockClass": "landingbannerImperdibili"
     },
