Tip Bar Feedaty, Cards categorie, pagina categorie con titolo/breve descrizione

--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -11,7 +11,8 @@
       "blockClass": "sticky-header"
     },
     "children": [
-      "flex-layout.row#header-promotion",
+      "flex-layout.row#tip-bar", //barra codici slider
+      //"flex-layout.row#header-promotion",
       "flex-layout.row#header-desktop-upper"
     ]
   },
