--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,7 +1,7 @@
 {
   "store.product": {
     "children": [
-      "flex-layout.row#feedaty-png",
+      //"flex-layout.row#feedaty-png",
       "responsive-layout.desktop#product",
       "responsive-layout.mobile#product",
       "flex-layout.row#newsletter"
