--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "vendor": "bricobravo",
   "name": "store-theme",
-  "version": "5.0.23",
+  "version": "5.0.24",
   "builders": {
     "react": "3.x",
     "assets": "0.x",
     "styles": "2.x",
     "store": "0.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "pixel": "0.x"
   },
   "scripts": {
     "postreleasy": "vtex publish --verbose"
@@ -80,7 +81,8 @@
     "vtex.order-items": "0.x",
     "vtex.modal-layout": "0.x",
     "vtex.store-video": "1.x",
-    "vtex.formatted-price": "0.x"
+    "vtex.formatted-price": "0.x",
+    "vtex.render-runtime": "8.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
