--- a/react/package.json
+++ b/react/package.json
@@ -19,14 +19,16 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-intl": "^2.7.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.0",
     "react-slick": "^0.29.0",
     "react-step-progress-bar": "^1.0.3",
+    "react-touch-drag-slider": "^2.2.5",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^9.0.0",
     "recompose": "^0.30.0",
     "state-pool": "^0.7.1",
-    "swiper": "^9.2.0"
+    "swiper": "8.4.5"
   },
   "devDependencies": {
     "@types/debounce": "^1.2.0",
