--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.2",
     "@vtex/css-handles": "^1.1.3",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "5.1.3",
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
